Fixed the contrast and Form label

--- a/styles/before-menu.css
+++ b/styles/before-menu.css
@@ -2,7 +2,11 @@
  * CSS for Accessible University Demo Site
  * http://uw.edu/accesscomputing/AU
  *
- * before-menu.css = Styles for inaccessible dropdown menu
+ * after-menu.css = Styles for accessible dropdown menu
+ *
+ * Uses Bootstraps default dropdown menu
+ * https://getbootstrap.com/docs/4.0/components/dropdowns/
+ *
  */
 
 
@@ -10,7 +14,7 @@
  * Utility menu
  */
 
-.utility-menu li {
+ .utility-menu li {
 	float:left;
 	margin-left: 5px;
 }
@@ -18,19 +22,38 @@
 	content: " | "
 }
 
- /*
-  * Main menu
-  */
 
-.navbar-nav a:focus {
-	outline: 1px dotted white;
+/*
+ * Main menu
+ */
+
+ /* overwrite some bootstrap menu colors */
+
+.navbar-toggler {
+	background-color: #28a745;
+}
+.navbar-dark {
+	color: #fff;
+}
+.navbar-dark .navbar-nav .nav-link {
+	color: lightgreen;
+	text-decoration: none;
+}
+.navbar-dark .navbar-nav .nav-item:hover {
+	color: lightgreen;
+	color: #000;
+}
+.navbar-dark .navbar-nav .nav-link:hover {
+	background-color: lightgreen;
+	color: #000;
 }
 .dropdown-menu {
 	margin-top:-1px;
 }
-.nav-item.dropdown:hover ul {
-	display:block;
+.dropdown-item {
+	text-decoration: none;
 }
-.navbar-toggler:hover + .navbar-collapse {
-	display:block;
+.dropdown-item:hover {
+	background-color: lightgreen;
+	color: #000;
 }
